force-app/main/default/objects/Qb_Invoice_Payment__c/Qb_Invoice_Payment__c.object-meta.xml
<CustomObject>
    <label>QB Invoice Payment</label>
    <nameField>
        <label>Qb Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Invoice Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>