force-app/main/default/objects/Qb_Invoice_Payment__c/fields/Payment_Qb_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Qb_Id__c</fullName>
    <label>Payment Qb Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>