force-app/main/default/objects/Qb_Invoice_Payment__c/fields/QB_Invoice__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QB Invoice</label>
    <referenceTo>QB_Invoice__c</referenceTo>
    <relationshipName>Qb_Invoice_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>