force-app/main/default/objects/Qb_Invoice_Payment__c/fields/Qb_Payment_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Qb_Payment_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Qb Payment Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>