force-app/main/default/objects/Qb_Invoice_Payment__c/fields/Qb_SyncToken__c.field-meta.xml
<CustomField>
    <fullName>Qb_SyncToken__c</fullName>
    <label>Qb SyncToken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>