force-app/main/default/objects/Qb_Invoice_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Qb_Id__c</columns>
    <columns>QB_Invoice__c</columns>
    <columns>Unapplied_Amount__c</columns>
    <columns>Invoice_Paid_Amount__c</columns>
    <columns>Amount__c</columns>
    <columns>Transaction_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>